--- a/LAB-GW/user-data.yaml
+++ b/LAB-GW/user-data.yaml
@@ -8,21 +8,21 @@ users:
     sudo: ALL=(ALL) NOPASSWD:ALL
     shell: /bin/bash
     ssh_authorized_keys:
-      - ssh-rsa AAAA...YOUR_PUB_KEY...<<<REPLACE_WITH_YOUR_SSH_PUB>>>
+      - ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQD...REPLACE_WITH_YOUR_PUBKEY...
 
 package_update: true
 package_upgrade: true
 packages:
-  - wireguard
   - iptables-persistent
   - dnsmasq
   - net-tools
   - tcpdump
-  - cron
   - python3
+  - curl
+  - iproute2
 
 write_files:
-  # netplan static IP (host-only)
+  # Netplan config: eth0 static, eth1 DHCP
   - path: /etc/netplan/50-lab-network.yaml
     permissions: '0644'
     content: |
@@ -35,11 +35,10 @@ write_files:
             addresses: [10.0.100.1/24]
             nameservers:
               addresses: [127.0.0.1]
-            routes: []
-           eth1:
+          eth1:
             dhcp4: yes
 
-  # dnsmasq stub (resolve login.cloud.example -> CLOUD_IP)
+  # dnsmasq lab mapping
   - path: /etc/dnsmasq.d/lab.conf
     permissions: '0644'
     content: |
@@ -47,18 +46,21 @@ write_files:
       bind-interfaces
       no-resolv
       server=8.8.8.8
-      address=/login.cloud.example/CLOUD_IP    # <<<REPLACE CLOUD_IP or remove if you prefer /etc/hosts>
+      # Replace with your real cloud login IP
+      address=/login.cloud.example/203.0.113.45
       cache-size=1000
 
-  # iptables script (lab-iptables.sh)
+  # iptables lock-down script
   - path: /usr/local/sbin/lab-iptables.sh
     permissions: '0755'
     content: |
       #!/bin/bash
-      CLOUD_IP=CLOUD_IP  # <<<REPLACE
-      LAB_SUBNET=10.0.100.0/24
-      IF_LAB=eth0
-      IF_WG=wg0
+      set -euo pipefail
+
+      CLOUD_IP="203.0.113.45"   # <<< REPLACE if needed
+      LAB_SUBNET="10.0.100.0/24"
+      IF_LAB="eth0"
+      IF_EXT="eth1"
 
       iptables -F
       iptables -t nat -F
@@ -66,50 +68,93 @@ write_files:
 
       iptables -P FORWARD DROP
       iptables -A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
+      iptables -A FORWARD -s ${LAB_SUBNET} -d ${CLOUD_IP} -i ${IF_LAB} -o ${IF_EXT} -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
+      iptables -A FORWARD -s ${LAB_SUBNET} -o ${IF_EXT} -j DROP
 
-      iptables -A FORWARD -s $LAB_SUBNET -d $CLOUD_IP -i $IF_LAB -o $IF_WG -p tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
+      iptables -t nat -A POSTROUTING -s ${LAB_SUBNET} -d ${CLOUD_IP} -o ${IF_EXT} -j MASQUERADE
 
-      iptables -A FORWARD -s $LAB_SUBNET -o $IF_WG -j DROP
-      iptables -A FORWARD -s $LAB_SUBNET ! -o $IF_WG -j DROP
+      if command -v netfilter-persistent >/dev/null 2>&1; then
+        netfilter-persistent save
+      else
+        iptables-save > /etc/iptables/rules.v4 || true
+      fi
 
-      iptables -t nat -A POSTROUTING -s $LAB_SUBNET -d $CLOUD_IP -o $IF_WG -j MASQUERADE
+      echo "Applied iptables: lab subnet -> ${CLOUD_IP}:443 via ${IF_EXT}"
 
-      # allow WG handshake (adjust port if needed)
-      iptables -A OUTPUT -o $IF_LAB -p udp --dport 51820 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-      iptables -A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-
-  # wg-watchdog: check wg0 and apply fail-closed if down
-  - path: /usr/local/bin/wg-watchdog.sh
+  # egress watchdog script
+  - path: /usr/local/bin/egress-watchdog.sh
     permissions: '0755'
     content: |
       #!/bin/bash
-      WG_IF=wg0
-      LAB_NET=10.0.100.0/24
+      set -euo pipefail
 
-      check_wg() {
-        ip link show dev $WG_IF >/dev/null 2>&1 || return 1
-        ip addr show dev $WG_IF | grep -q "inet " || return 1
-        return 0
+      CLOUD_IP="203.0.113.45"
+      CHECK_PORT=443
+      LAB_NET="10.0.100.0/24"
+
+      check_conn() {
+        timeout 3 bash -c "cat < /dev/null > /dev/tcp/${CLOUD_IP}/${CHECK_PORT}" >/dev/null 2>&1
       }
 
-      if check_wg; then
-        iptables -D FORWARD -s $LAB_NET -j DROP 2>/dev/null || true
-        logger -t wg-watchdog "wg0 up — removed fail-closed"
-        exit 0
+      apply_fail_closed() {
+        if ! iptables -C FORWARD -s ${LAB_NET} -j DROP >/dev/null 2>&1; then
+          iptables -I FORWARD 1 -s ${LAB_NET} -j DROP
+          logger -t egress-watchdog "Egress down: fail-closed applied"
+        fi
+      }
+
+      remove_fail_closed() {
+        while iptables -C FORWARD -s ${LAB_NET} -j DROP >/dev/null 2>&1; do
+          iptables -D FORWARD -s ${LAB_NET} -j DROP || break
+          logger -t egress-watchdog "Egress up: fail-closed removed"
+        done
+      }
+
+      if check_conn; then
+        remove_fail_closed
       else
-        iptables -I FORWARD 1 -s $LAB_NET -j DROP 2>/dev/null || true
-        logger -t wg-watchdog "wg0 down — applied fail-closed"
-        exit 2
+        apply_fail_closed
       fi
+
+  # systemd unit for watchdog
+  - path: /etc/systemd/system/egress-watchdog.service
+    permissions: '0644'
+    content: |
+      [Unit]
+      Description=Egress Watchdog (fail-closed)
+      After=network-online.target
+
+      [Service]
+      Type=oneshot
+      ExecStart=/usr/local/bin/egress-watchdog.sh
+
+      [Install]
+      WantedBy=multi-user.target
+
+  # systemd timer
+  - path: /etc/systemd/system/egress-watchdog.timer
+    permissions: '0644'
+    content: |
+      [Unit]
+      Description=Run egress-watchdog every 10s
+
+      [Timer]
+      OnUnitActiveSec=10s
+      AccuracySec=1s
+
+      [Install]
+      WantedBy=timers.target
 
 runcmd:
   - [ sh, -c, "netplan apply || true" ]
   - [ sh, -c, "systemctl enable --now dnsmasq || true" ]
   - [ sh, -c, "chmod +x /usr/local/sbin/lab-iptables.sh && /usr/local/sbin/lab-iptables.sh || true" ]
   - [ sh, -c, "systemctl daemon-reload || true" ]
-  - [ sh, -c, "cat > /etc/systemd/system/wg-watchdog.service <<'SVC'\n[Unit]\nDescription=WG Watchdog\nAfter=network-online.target\n[Service]\nType=oneshot\nExecStart=/usr/local/bin/wg-watchdog.sh\n[Install]\nWantedBy=multi-user.target\nSVC" ]
-  - [ sh, -c, "cat > /etc/systemd/system/wg-watchdog.timer <<'TMR'\n[Unit]\nDescription=Run wg-watchdog every 10s\n[Timer]\nOnUnitActiveSec=10s\nAccuracySec=1s\n[Install]\nWantedBy=timers.target\nTMR" ]
-  - [ sh, -c, "systemctl daemon-reload && systemctl enable --now wg-watchdog.timer || true" ]
+  - [ sh, -c, "systemctl enable --now egress-watchdog.timer || true" ]
+  - [ sh, -c, "echo 'LAB-GW ready: eth0=10.0.100.1, eth1=DHCP, egress locked to 203.0.113.45:443' > /etc/motd" ]
 
 final_message: |
-  LAB-GW cloud-init complete. Edit /etc/wireguard/wg0.conf with real keys and start wg-quick@wg0.
+  LAB-GW bootstrap finished.
+  * Replace SSH key above with your own before ISO build.
+  * Verify iptables rules with: sudo iptables -L -v -n
+  * Verify watchdog: sudo systemctl status egress-watchdog.timer
